--- a/src/UnknownIndustries.csproj
+++ b/src/UnknownIndustries.csproj
@@ -76,9 +76,11 @@
     <Compile Include="JsonLoader.cs" />
     <Compile Include="LootOverride.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="Patches\PatchCondOwner.cs" />
     <Compile Include="Patches\PatchCrewSim.cs" />
     <Compile Include="Patches\PatchDataHandler.cs" />
     <Compile Include="Patches\PatchGUIItemList.cs" />
+    <Compile Include="Patches\PatchInitShip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShipOverride.cs" />
   </ItemGroup>
