--- a/src/UnknownIndustries.csproj
+++ b/src/UnknownIndustries.csproj
@@ -35,17 +35,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\..\..\Games\Ostranauts.v0.14.0.13\Ostranauts\Ostranauts_Data\Managed\UnityModManager\0Harmony.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\..\Games\Ostranauts\Ostranauts_Data\Managed\UnityModManager\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>D:\Games\Ostranauts.v0.14.0.13\Ostranauts\Ostranauts_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Assembly-CSharp-firstpass, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Games\Ostranauts.v0.14.0.13\Ostranauts\Ostranauts_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\..\Games\Ostranauts\Ostranauts_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,22 +47,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="TextMeshPro-5.6-Runtime">
-      <HintPath>..\..\..\..\..\Games\Ostranauts.v0.14.0.13\Ostranauts\Ostranauts_Data\Managed\TextMeshPro-5.6-Runtime.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\..\Games\Ostranauts\Ostranauts_Data\Managed\TextMeshPro-5.6-Runtime.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>D:\Games\Ostranauts.v0.14.0.13\Ostranauts\Ostranauts_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\..\Games\Ostranauts\Ostranauts_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Games\Ostranauts.v0.14.0.13\Ostranauts\Ostranauts_Data\Managed\UnityEngine.UI.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\..\..\..\..\Games\Ostranauts\Ostranauts_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
-    <Reference Include="UnityModManager, Version=0.31.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Games\Ostranauts.v0.14.0.13\Ostranauts\Ostranauts_Data\Managed\UnityModManager\UnityModManager.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="UnityModManager">
+      <HintPath>..\..\..\..\..\Games\Ostranauts\Ostranauts_Data\Managed\UnityModManager\UnityModManager.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +66,7 @@
     <Compile Include="Patches\PatchCondOwner.cs" />
     <Compile Include="Patches\PatchCrewSim.cs" />
     <Compile Include="Patches\PatchDataHandler.cs" />
+    <Compile Include="Patches\PatchGUIHelmet.cs" />
     <Compile Include="Patches\PatchGUIItemList.cs" />
     <Compile Include="Patches\PatchInitShip.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
