--- a/data/conditions/unknownindustries.json
+++ b/data/conditions/unknownindustries.json
@@ -1,6 +1,6 @@
 [
     {
-        "strName": "UI_Is_Unknown_Industries",
+        "strName": "UI_Is_UnknownIndustries",
         "strNameFriendly": "Unknown Industries",
         "strColor": "Neutral",
         "strDesc": "[us] is an 'Unknown Industries'-brand item.",
